# shadow-dashboard

./: .dockerignore  .env  .gitignore  Dockerfile  Dockerfile.dashboard  Dockerfile.evaluator  Makefile  README.md  docker-compose.yml  example_config.yaml  example_config_small.yaml  index.js  package-lock.json  package.json
controllers/: dashboard.js  experiments.js
evaluators/: CrossCorrelation.py  Dockerfile.evaluator  evaluateTimeseries.py  (+1 more)
flow2text/: .gitignore  README.md  pyproject.toml
flow2text/config/: dns.yaml  dns_multi.yaml  dns_multi_scale.yaml  dns_vpn.yaml  doh.yaml  doh_edns.yaml  doh_multi.yaml  doh_multi_scale.yaml  doh_multi_scale5k10k.yaml  doh_multi_vpn.yaml  doh_multi_vpn_scale5k10k.yaml  dot.yaml  dot_multi.yaml  dot_multi_scale.yaml  dot_multi_vpn.yaml  dot_multi_vpn_scale5k10k.yaml  dot_single_vpn_scale5k10k.yaml
flow2text/notebooks/: GraphNoise.ipynb  Graphs.ipynb  MRTG_Graph.ipynb  NCC Research.ipynb  TDA.ipynb  main.ipynb
flow2text/src/: .gitignore  Clustering.py  Config.py  CrossCorrelation.py  DFutil.py  Metrics.py  Packets2TS.py  Preprocess.py  ScopeFilters.py  TDA.py  Tasks.py  cli.py  experiment_runner.py  ip_convert.py  sim.py
flow2text/src/.ipynb_checkpoints/: DFutil-checkpoint.py  Packets2TS-checkpoint.py  Preprocess-checkpoint.py  PrivacyScope-checkpoint.py  Solo-checkpoint.py  TDA-checkpoint.py  main-checkpoint.py
flow2text/util/: install_dep.sh  pcap_to_csv.sh  preprocess_data.sh
flow2text/util/.ipynb_checkpoints/: pcap_to_csv-checkpoint.sh  pcapng_to_csv-checkpoint.sh  process_data_argus-checkpoint.sh
utils/: db.js  (+2 more)
(+25 files in other folders)
